--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+.App {
+  width: 800px;
+  max-width: 100%;
+}
+
+.app-title {
+  font-family: "Pacifico", cursive;
+  font-size: 34px;
+}
+
+h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+li {
+  font-family: "Roboto", sans-serif;
+}
+
 p {
   margin: 0;
   display: flex;
