--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,25 @@ h5 {
 
 li {
   font-family: "Roboto", sans-serif;
+  font-size: 20px;
+}
+
+.tag {
+  padding: 1px 10px;
+  background-color: rgb(181, 181, 181);
+  font-family: "Roboto", sans-serif;
+  border-radius: 5px;
+  user-select: none;
+  cursor: pointer;
+  margin: 0 4px;
+  font-size: 15px;
+}
+
+.info {
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+  color: gray;
+  padding: 0 10px;
 }
 
 p {
