--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ h5 {
   font-weight: 700;
 }
 
-li {
+.list-group li {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
 }
@@ -29,13 +29,13 @@ li {
   border-radius: 5px;
   user-select: none;
   cursor: pointer;
-  margin: 0 4px;
+  margin-right: 4px;
   font-size: 15px;
 }
 
 .info {
   font-family: "Roboto", sans-serif;
-  font-size: 12px;
+  font-size: 15px;
   color: gray;
   padding: 0 10px;
 }
@@ -44,4 +44,8 @@ p {
   margin: 0;
   display: flex;
   align-items: center;
+}
+
+select {
+  font-size: 15px !important;
 }
