--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,17 @@
 select {
   font-size: 15px !important;
 }
+
+.tags-container::-webkit-scrollbar {
+  height: 7px;
+}
+
+.tags-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 5px;
+}
+
+.tags-container::-webkit-scrollbar-thumb {
+  background: rgb(185, 185, 185);
+  border-radius: 5px;
+}
