--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,14 @@ body *::selection {
   background-color: rgba(169, 255, 167, 0.833);
   color: #000;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
